project-tree: remove synthesized "Empty" node before insertion

If we have a synthesized "Empty" node in the tree, we should remove it
before inserting our newly created file. Otherwise, we'll do a node
comparison for insertion sort and segfault from a NULL DzlTreeNode:item
property.

https://bugzilla.gnome.org/show_bug.cgi?id=791278